<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Profile.ProfileActivity">

    <TextView
        style="@style/TextStyle20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_black"
        android:letterSpacing="0.2"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00000000"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/default_avatar1"
        app:shapeAppearanceOverlay="@style/avatar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/nameicon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:baselineAlignBottom="true"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/name" />

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/nameicon"
            android:backgroundTint="@color/black"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />


        <ImageView
            android:id="@+id/infoicon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/nameicon"
            android:layout_marginBottom="-84dp"
            android:baselineAlignBottom="true"
            android:src="@drawable/ic_baseline_info_24"
            android:contentDescription="@string/info" />

        <EditText
            android:id="@+id/infoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profileName"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-84dp"
            android:layout_toEndOf="@+id/nameicon"
            android:backgroundTint="@color/black"
            android:hint="@string/info"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/profileSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:text="@string/save" />
    </RelativeLayout>

</LinearLayout>
</layout>