<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/loginbackground"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto_black"
        android:letterSpacing="0.1"
        android:text="@string/login"
        android:textColor="@color/Green_200"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        style="@style/TextStyle18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/verify_phone_number"
        android:textColor="@color/black"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We will send an SMS message to verify your phone number."
        style="@style/TextStyle14"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210dp"
        android:textAlignment="center"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="6dp"
        >

        <com.hbb20.CountryCodePicker
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:id="@+id/ccp"
            app:ccpDialog_textColor="#000000"
            app:ccp_arrowColor="@color/white"
            app:ccp_contentColor="@color/white"
            android:background="@drawable/border"
            android:gravity="center"
            android:layout_marginStart="8dp"
            app:ccp_autoFormatNumber="false"
            />

        <EditText
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="phone number..."
            android:maxLength="10"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_toRightOf="@+id/ccp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/Blue_100"
            android:background="@drawable/border"
            android:id="@+id/phoneId"
            />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/send_otp"
        android:id="@+id/sendOtpButtonId"
        />


</LinearLayout>
</layout>